# smart-report

./: .gitignore  .opencodeignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pyrightconfig.json
docs/zh/: README.md  api.md
examples/: flow_layout.py  layered_canvas.py  layout_primitives.py  paginated_report.py  report_demo.py  v1_1_features.py  v1_2_features.py  v1_3_features.py  v1_5_features.py  v2_0_features.py  v2_11_layered_report.py  v2_11_layered_table_region.py  v2_12_background_images.py  v2_12_image_text_composition.py  v2_1_features.py  v2_2_typography.py  v2_3_advanced_typography.py  v2_4_document_structure.py  v2_6_table_auto_fit.py  v2_7_rich_text_links.py  v2_8_flex_wrap.py  v2_9_flex_refinements.py  zh_table_demo.py
src/: __init__.py
src/smart_report/: __init__.py  _builder_core.py  builder.py  document.py
src/smart_report/containers/: __init__.py  canvas.py  frame.py  table.py
src/smart_report/elements/: __init__.py  image.py  rich_text.py  shape.py  spacer.py  text.py
src/smart_report/layout/: AGENTS.md  __init__.py  node.py  paginate.py  pass2_widths.py  pass3_heights.py  pass4_render.py  rich_text_layout.py  table_model.py  text_overflow.py  text_wrap.py
src/smart_report/render/: __init__.py  painters.py  rl_adapter.py
src/smart_report/style/: __init__.py  color.py  font.py  letter_spacing.py  typography.py  units.py
tests/: test_document_structure.py  test_table_v2.py
