[project]
name = "smart-report"
version = "2.1.0"
requires-python = ">=3.10"
description = "Modern PDF creation library with flow layout and layered canvas composition"
readme = "README.md"
dependencies = [
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
    "svglib>=1.5.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
