[project]
name = "smart-report"
version = "2.12.3"
requires-python = ">=3.10"
description = "Modern PDF creation library with flow layout and layered canvas composition"
readme = "README.md"
dependencies = [
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
    "svglib>=1.5.1",
    "arabic-reshaper>=3.0.1",
    "python-bidi>=0.6.9",
    "fonttools>=4.62.1",
    "uharfbuzz>=0.54.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
